# math-modeling-starter

./: .gitignore  CLAUDE.md  FDE_ARCHITECTURE.md  README.md  pyproject.toml  quick_start.py  requirements.txt  setup.py
config/: config.yaml  params.yaml  settings.py
data/: README.md
dataforcoder/: 2026-06-11_loop-1-fde-transformation.md  2026-06-11_loop-2-metrics-tests-and-templates.md  2026-06-11_loop-3-solver-batch-state-framework.md
logs/: README.md
paper/: README.md
paper/template/: template.md  template.tex
problems/: README.md
scripts/: new_problem.py
src/: phase0_context.py  phase1_data.py  phase2_model.py  phase3_solve.py  phase4_validate.py  phase5_viz.py  phase6_report.py  pipeline.py  problem_templates.py  run.py  runner.py  utils.py
templates/: README.md  __init__.py  data_preprocessing.py  metrics.py  paper_tools.py  prediction.py  sensitivity.py  solvers.py  validation.py  visualization.py
tests/: test_phase0_context.py  test_phase1_data.py  test_phase2_model.py  test_phase3_solve.py  test_phase4_validate.py  test_phase5_viz.py  test_phase6_report.py  test_problem_templates.py  test_runner.py  test_utils.py
utils/: file_utils.py  logger.py
